# rhBackFast

./: .env  .env.example  .gitignore  FRONTEND_IMPLEMENTATION_PROMPT.md  README.md  alembic.ini  create_permissions.py  holi.py  main.py  pyproject.toml  rapha.md
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 1043ef9eeb3d_add_conge_app_tables.py  13c5508e493d_add_password_reset_otp_table.py  893871e59f44_create_audit_log_table.py  a1b2c3d4e5f6_replace_conge_with_workflow.py  b2c3d4e5f6a7_paie_periode_workflow_columns.py  c3d4e5f6a7b8_drop_permission_action_check.py  d58e0c172f99_add_all_models.py  d7a92dd58145_user_employe_cascade_delete.py  e4f5a6b7c8d9_add_presence_app_tables.py  f3f50a85e487_add_paie_app_tables.py  f5a6b7c8d9e0_add_presence_declarations.py
app/: __init__.py
app/audit_app/: __init__.py  constants.py  models.py  routes.py  schemas.py  services.py
app/conge_app/: __init__.py  constants.py  init_data.py  models.py  routes.py  schemas.py
app/core/: audit_decorators.py  audit_middleware.py  branding.py  config.py  database.py  permissions.py  query_utils.py  security.py  startup.py  storage_service.py
app/paie_app/: __init__.py  constants.py  init_data.py  models.py  routes.py  schemas.py  workflow_constants.py  workflow_routes.py
app/presence_app/: __init__.py  constants.py  init_data.py  models.py  routes.py  schemas.py  services.py
app/reset_password_app/: __init__.py  models.py  routes.py  schemas.py
app/user_app/: __init__.py  constants.py  email_service.py  models.py  routes.py  (+2 more)
scripts/: seed_mock_data.py
(+38 files in other folders)
