[project]
name = "rhbackfast"
version = "0.1.0"
description = "Système de gestion RH avec FastAPI et SQLAlchemy asynchrone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.1.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
    "holidays>=0.91",
    "ruff>=0.15.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "black>=23.12.1",
    "ruff>=0.1.11",
    "hypothesis>=6.92.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
